# sw

./: .clang-format  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Doxyfile  LICENSE  README.en.md  README.md
.github/workflows/: build-single-header.yml  unit-tests.yml  update-doxygen-docs.yml
docs/: Alignment_8h_source.html  Animation_8h_source.html  App_8h_source.html  BindingCastHelper_8h_source.html  Binding_8h_source.html  BmpBox_8h_source.html  ButtonBase_8h_source.html  Button_8h_source.html  CanvasLayout_8h_source.html  Canvas_8h_source.html  CheckBox_8h_source.html  CheckableButton_8h_source.html  ColorDialog_8h_source.html  Color_8h_source.html  ComboBox_8h_source.html  CommandLink_8h_source.html  ContextMenu_8h_source.html  Control_8h_source.html  Converters_8h_source.html  Cursor_8h_source.html  DataBinding_8h_source.html  DateTimePicker_8h_source.html  Delegate_8h_source.html  Dictionary_8h_source.html  Dip_8h_source.html  DockLayout_8h_source.html  DockPanel_8h_source.html  DockSplitter_8h_source.html  EnumBit_8h_source.html  EventHandlerWrapper_8h_source.html  Event_8h_source.html  FileDialog_8h_source.html  FillLayout_8h_source.html  FolderDialog_8h_source.html  FontDialog_8h_source.html  Font_8h_source.html  FrameworkElement_8h_source.html  GridLayout_8h_source.html  Grid_8h_source.html  GroupBox_8h_source.html  (+1524 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  (+130 more)
doxygen/: Doxyfile
examples/: CMakeLists.txt  examples.sln
examples/01_helloworld/src/: main.cpp
examples/02_helloworld2/: Main.cpp
examples/02_helloworld2/src/: main.cpp
examples/03_helloworld2_oop/src/: MyWindow.hpp
examples/04_docklayout/: MyWindow.hpp
examples/04_docklayout/src/: main.cpp
examples/05_grid/: MyWindow.hpp
examples/05_grid/src/: MyWindow.hpp  main.cpp
examples/06_scrollbar/src/: MyWindow.hpp
examples/07_scrollbar_and_float/src/: MyWindow.hpp
examples/07_split_view/: CMakeLists.txt  MyWindow.hpp
examples/08_multithreading/: Main.cpp  MyWindow.hpp
examples/08_multithreading/src/: MyWindow.hpp
examples/09_binding/: CMakeLists.txt  MyWindow.hpp
examples/09_binding/src/: MyWindow.hpp  main.cpp
examples/10_datacontext/: MyWindow.hpp  ViewModel.hpp
examples/10_datacontext/src/: MyWindow.hpp  ViewModel.hpp
examples/docklayout/: CMakeLists.txt  MyWindow.hpp  docklayout.vcxproj  docklayout.vcxproj.filters
examples/grid/: CMakeLists.txt  MyWindow.hpp  grid.vcxproj  main.cpp
examples/hello_world/: CMakeLists.txt  main.cpp
examples/hello_world2/: CMakeLists.txt  main.cpp
examples/hello_world2_oop/: CMakeLists.txt
examples/helloworld/: helloworld.vcxproj  main.cpp
examples/helloworld2/: helloworld2.vcxproj  main.cpp
examples/helloworld2_oop/: MyWindow.hpp  helloworld2_oop.vcxproj
examples/scrollbar/: CMakeLists.txt  MyWindow.hpp  scrollbar.vcxproj
examples/scrollbar_and_float/: CMakeLists.txt  MyWindow.hpp  main.cpp  scrollbar_and_float.vcxproj
include/: Animation.h  App.h  BmpBox.h  Canvas.h  CheckableButton.h  ComboBox.h  ContextMenu.h  Cursor.h  DateTimePicker.h  Dictionary.h  DockPanel.h  EnumBit.h  FileDialog.h  FolderDialog.h  Grid.h  GridLayout.h  GroupBox.h  HitTestResult.h  IPAddressControl.h  ITag.h  Icon.h  Keys.h  Layer.h  Panel.h  Path.h  Rect.h  RoutedEventArgs.h  Screen.h  ScrollEnums.h  Splitter.h  StackLayoutH.h  StaticControl.h  StatusBar.h  SysLink.h  TabControl.h  Thickness.h  Timer.h  ToolTip.h  UniformGrid.h  UniformGridLayout.h  (+3 more)
single_header/: CMakeLists.txt  build.py  sw_all.cpp  sw_all.h
src/: Animation.cpp  App.cpp  Button.cpp  ButtonBase.cpp  Color.cpp  Cursor.cpp  Dip.cpp  DockPanel.cpp  FileDialog.cpp  FolderDialog.cpp  Font.cpp  GridLayout.cpp  HwndHost.cpp  IconBox.cpp  Keys.cpp  Layer.cpp  LayoutHost.cpp  MonthCalendar.cpp  Point.cpp  ProcMsg.cpp  ProgressBar.cpp  RadioButton.cpp  Rect.cpp  RoutedEvent.cpp  Screen.cpp  Size.cpp  StackLayout.cpp  StackLayoutV.cpp  StaticControl.cpp  TabControl.cpp  TextBoxBase.cpp  Thickness.cpp  Timer.cpp  ToolTip.cpp  UIElement.cpp  Window.cpp  WrapLayout.cpp  WrapLayoutH.cpp
sw/: CMakeLists.txt  swConfig.cmake.in
sw/inc/: AbsoluteLayout.h  Alignment.h  Animation.h  App.h  Binding.h  BindingCastHelper.h  BmpBox.h  BoxedObject.h  Button.h  ButtonBase.h  Canvas.h  CanvasLayout.h  CheckBox.h  CheckableButton.h  Color.h  ColorDialog.h  ComboBox.h  CommandLink.h  ContextMenu.h  Control.h  Converters.h  Cursor.h  DataBinding.h  DateTimePicker.h  Delegate.h  Dictionary.h  Dip.h  DockLayout.h  DockPanel.h  DockSpliter.h  DockSplitter.h  Dpi.h  EnumBit.h  Event.h  EventHandlerWrapper.h  FileDialog.h  FillLayout.h  FolderDialog.h  Font.h  FontDialog.h  (+93 more)
sw/src/: AbsoluteLayout.cpp  Alignment.cpp  Animation.cpp  App.cpp  Binding.cpp  BmpBox.cpp  Button.cpp  ButtonBase.cpp  Canvas.cpp  CanvasLayout.cpp  CheckBox.cpp  CheckableButton.cpp  Color.cpp  ColorDialog.cpp  ComboBox.cpp  CommandLink.cpp  ContextMenu.cpp  Control.cpp  Cursor.cpp  DateTimePicker.cpp  Dip.cpp  DockLayout.cpp  DockPanel.cpp  DockSpliter.cpp  DockSplitter.cpp  Dpi.cpp  FileDialog.cpp  FillLayout.cpp  FolderDialog.cpp  Font.cpp  FontDialog.cpp  FrameworkElement.cpp  Grid.cpp  GridLayout.cpp  GroupBox.cpp  HotKeyControl.cpp  HwndHost.cpp  HwndWrapper.cpp  ICtlColor.cpp  ILayout.cpp  (+59 more)
tests/: .editorconfig  CMakeLists.txt  CollectionTests.cpp  PropertyTests.cpp  Test.h  TestMain.cpp
tests/support/: LayoutTestHelpers.h  Test.h
tests/unit/: CollectionTests.cpp  ConverterBindingTests.cpp  DelegateEventTests.cpp  LayoutTests.cpp  MacroPropertyTests.cpp  PropertyTests.cpp  ReflectionVariantTests.cpp  RoutedInputTests.cpp  TestFrameworkTests.cpp  UtilityTests.cpp  ValueTypeTests.cpp
vs/: sw.sln  sw.vcxproj  sw.vcxproj.filters
(+6 files in other folders)
